# xsoc_st_rm0451

./: CMakeLists.txt  DMA.cpp  DMA.hpp  config.hpp  defs.hpp  rcc.hpp
clocks/: hclk.hpp  pclk.hpp  sysclk.hpp
clocks/sources/: hse.cpp  hsi16.cpp  hsi16.hpp  msi.cpp
peripherals/ADC/: ADC.cpp  ADC.hpp
peripherals/GPIO/: GPIO.cpp  GPIO.hpp  base.hpp  gpio_ll.hpp
peripherals/SPI/: SPI.cpp  SPI.hpp
peripherals/Timer/: LPTIM.cpp  LPTIM.hpp
peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
rm0451/: DMA.cpp  DMA.hpp  rcc.hpp
rm0451/clocks/: hclk.hpp  pclk.hpp  sysclk.hpp
rm0451/clocks/sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  msi.cpp  msi.hpp
rm0451/peripherals/ADC/: ADC.cpp  ADC.hpp
rm0451/peripherals/GPIO/: GPIO.cpp  GPIO.hpp  base.hpp  gpio_ll.hpp
rm0451/peripherals/SPI/: SPI.cpp  SPI.hpp
rm0451/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp
rm0451/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
rm0451/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
rm0451/system/pwr/: pwr.cpp  pwr.hpp
rm0451/utils/: delay.cpp  tick_counter.cpp  tick_counter.hpp  wait_until.cpp
sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  msi.cpp  msi.hpp
system/mcu/: mcu.cpp  mcu.hpp
system/pwr/: pwr.cpp  pwr.hpp
utils/: delay.cpp  delay.hpp  tick_counter.cpp  tick_counter.hpp  wait_until.cpp  wait_until.hpp
